# CrewAI-First-Attempt--basic-

./: README.md  pyproject.toml
src/testone/: crew.py  main.py
