[project]
name = "testone"
version = "0.1.0"
description = "testOne using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
testone = "testone.main:run"
run_crew = "testone.main:run"
train = "testone.main:train"
replay = "testone.main:replay"
test = "testone.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
